Changes in version 0.1.4 - <not yet released>
 - Fix 'obfsproxy --version' when called outside of a git
   repository. Fixes bug 5560.
 - Fix assertion failure when connecting to a SOCKS destination. Fixes
   bug #5586.
 - Fix crash when parsing obfs2 command line arguments. Fixes bug
   #5141.


Changes in version 0.1.3 - 2012-04-03
 - Display git revision when we start logging. Fixes part of bug
   #5157.
 - Implement obfsproxy --version. Fixes the rest of bug #5157.
 - Implement obfsproxy --help.
 - Fix assertion failure when obfsproxy starts without network
   connectivity. Fixes bug #5156.


Changes in version 0.1.1 - 2012-03-09
 - Add trailing slash to the torproject URL in the man page. Fixes
   bug #5311. Patch by Peter Palfrader.
 - Add LICENSE and Doxyfile to the release archives from now on.
   Fixes bug #5312. Patch by Peter Palfrader.
 - Allow doxygen documentation to be built in out-of-source
   builds. Fixes bug #5315. Patch by Peter Palfrader.
 - Fix out-of-source building of tester.py. Fixes bug #5310. Patch by
   Peter Palfrader.
 - Improve README installation instructions. Fixes bug #5313.
 - Add gcc and ld hardening flags. Fixes part of #5131. Patch by
   ioerror.
 - Add AppArmor profile for obfsproxy. Fixes part of #5131. Patch by
   ioerror.


Changes in version 0.1.0 - 2012-03-05
 - Initial release.
